--- a/src/proc_ScoreBoard/proc_play_review.ipynb
+++ b/src/proc_ScoreBoard/proc_play_review.ipynb
@@ -202,14 +202,14 @@
    "outputs": [],
    "source": [
     "## Game_info Feature 구성\n",
-    "# G_ID :: BaseInfo['G_ID']\n",
-    "# START_TM :: BaseInfo['START_TM']\n",
-    "# END_TM :: BaseInfo['END_TM']\n",
-    "# AWAY_HOME :: G_ID의 TEAM_CHAR 순서(away-home 순서) 대로 표시\n",
-    "# TEAM_ID ::\n",
+    "# G_ID :: BaseInfo['G_ID']. Game id\n",
+    "# START_TM :: BaseInfo['START_TM']. 경기 시작 시간\n",
+    "# END_TM :: BaseInfo['END_TM']. 경기 종료 시간\n",
+    "# AWAY_HOME :: 홈/어웨이 팀 구분. 어웨이:1, 홈:2\n",
+    "# TEAM_ID :: Team_idx와 join. 팀 코드를 두자리 int로 구성된 ID 값으로 대체.\n",
     "# SCORE :: 해당 팀의 경기 점수 출력\n",
     "# PLAY_RESULT :: BaseInfo['T_SCORE_CN','B_SCORE_CN']의 값을 비교하여 승:3, 무:2, 패:1\n",
-    "# PRAK_ID :: BaseInfo['S_NM']과 Park_idx join 수행\n",
+    "# PRAK_ID :: BaseInfo['S_NM']과 Park_idx join 수행. asos code와 동일.\n",
     "# YEAR :: G_ID 앞 4자리\n",
     "\n",
     "## GameInfo\n",
